@@ -35,6 +35,8 @@ t/Data-Login/05-id.t
 t/Data-Login/06-login_name.t
 t/Data-Login/07-password_hash.t
 t/Data-Login/08-roles.t
+t/Data-Login/09-valid_from.t
+t/Data-Login/10-valid_to.t
 xt/Data-Login-Role/01-pod_coverage.t
 xt/Data-Login-Role/02-pod.t
 xt/Data-Login/01-pod_coverage.t
