@@ -27,6 +27,8 @@ no_index:
     - t
     - xt
 requires:
+  DateTime: 0
+  Error::Pure: 0
   Mo: 0
   Mo::utils: 0.21
   perl: 5.8.0
