@@ -10,6 +10,8 @@ SYNOPSIS
      my $login_name = $obj->login_name;
      my $password_hash = $obj->password_hash;
      my $roles_ar = $obj->roles;
+     my $valid_from = $obj->valid_from;
+     my $valid_to = $obj->valid_to;
 
 METHODS
   "new"
@@ -42,6 +44,16 @@ METHODS
             Login roles list. Possible value is reference to array with
             Data::Login::Role objects. Parameter is optional. Default value
             is [].
+
+    *       "valid_from"
+
+            Date and time of start of use. Must be a DateTime object. It's
+            required.
+
+    *       "valid_to"
+
+            Date and time of end of use. An undefined value means it is in
+            use. Must be a DateTime object. It's optional.
 
     Returns instance of object.
 
@@ -80,6 +92,20 @@ METHODS
 
     Returns reference to array with Data::Login::Role objects.
 
+  "valid_from"
+     my $valid_from = $obj->valid_from;
+
+    Get date and time of start of use.
+
+    Returns DateTime object.
+
+  "valid_to"
+     my $valid_to = $obj->valid_to;
+
+    Get date and time of end of use.
+
+    Returns DateTime object or undef.
+
 ERRORS
      new():
              Parameter 'hash_type' is required.
@@ -97,6 +123,16 @@ ERRORS
              Parameter 'roles' must be a array.
                      Value: %s
                      Reference: %s
+             Parameter 'valid_from' is required.
+             Parameter 'valid_from' must be a 'DateTime' object.
+                     Value: %s
+                     Reference: %s
+             Parameter 'valid_to' must be a 'DateTime' object.
+                     Value: %s
+                     Reference: %s
+             Parameter 'valid_to' must be older than 'valid_from' parameter.
+                     Value: %s
+                     Valid from: %s
              Roles isn't 'Data::Login::Role' object.
                      Value: %s
                      Reference: %s
@@ -108,12 +144,17 @@ EXAMPLE
      use Data::HashType;
      use Data::Login;
      use Data::Login::Role;
+     use DateTime;
 
      my $obj = Data::Login->new(
              'hash_type' => Data::HashType->new(
-                     'active' => 1,
                      'id' => 1,
                      'name' => 'SHA-512',
+                     'valid_from' => DateTime->new(
+                             'day' => 1,
+                             'month' => 1,
+                             'year' => 2024,
+                     ),
              ),
              'id' => 2,
              'login_name' => 'michal.josef.spacek',
@@ -135,6 +176,11 @@ EXAMPLE
                              'role' => 'Bad',
                      ),
              ],
+             'valid_from' => DateTime->new(
+                     'day' => 1,
+                     'month' => 1,
+                     'year' => 2024,
+             ),
      );
 
      # Print out.
@@ -145,6 +191,7 @@ EXAMPLE
      print "Active roles:\n";
      print join "\n", map { $_->active ? ' - '.$_->role : () } @{$obj->roles};
      print "\n";
+     print 'Valid from: '.$obj->valid_from->ymd."\n";
 
      # Output:
      # Hash type: SHA-512
@@ -154,9 +201,10 @@ EXAMPLE
      # Active roles:
      #  - Admin
      #  - User
+     # Valid from: 2024-01-01
 
 DEPENDENCIES
-    Mo, Mo::utils.
+    DateTime, Error::Pure, Mo, Mo::utils.
 
 REPOSITORY
     <https://github.com/michal-josef-spacek/Data-Login>
