@@ -6,7 +6,7 @@ use Data::Login;
 use DateTime;
 use English;
 use Error::Pure::Utils qw(clean);
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 
 # Test.
@@ -22,6 +22,11 @@ my $obj = Data::Login->new(
 	'login_name' => 'skim',
 	# foobar
 	'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+	'valid_from' => DateTime->new(
+		'year' => 2024,
+		'month' => 1,
+		'day' => 1,
+	),
 );
 isa_ok($obj, 'Data::Login');
 
@@ -31,6 +36,11 @@ eval {
 		'login_name' => 'skim',
 		# foobar
 		'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+		'valid_from' => DateTime->new(
+			'year' => 2024,
+			'month' => 1,
+			'day' => 1,
+		),
 	);
 };
 is($EVAL_ERROR, "Parameter 'hash_type' is required.\n",
@@ -50,6 +60,11 @@ eval {
 		),
 		# foobar
 		'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+		'valid_from' => DateTime->new(
+			'year' => 2024,
+			'month' => 1,
+			'day' => 1,
+		),
 	);
 };
 is($EVAL_ERROR, "Parameter 'login_name' is required.\n",
@@ -68,8 +83,32 @@ eval {
 			),
 		),
 		'login_name' => 'skim',
+		'valid_from' => DateTime->new(
+			'year' => 2024,
+			'month' => 1,
+			'day' => 1,
+		),
 	);
 };
 is($EVAL_ERROR, "Parameter 'password_hash' is required.\n",
 	"Parameter 'password_hash' is required.");
+clean();
+
+# Test.
+eval {
+	Data::Login->new(
+		'hash_type' => Data::HashType->new(
+			'name' => 'sha256',
+			'valid_from' => DateTime->new(
+				'day' => 1,
+				'month' => 1,
+				'year' => 2024,
+			),
+		),
+		'login_name' => 'skim',
+		'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+	);
+};
+is($EVAL_ERROR, "Parameter 'valid_from' is required.\n",
+	"Parameter 'valid_from' is required.");
 clean();
