@@ -20,6 +20,11 @@ my $obj = Data::Login->new(
 	'login_name' => 'skim',
 	# foobar
 	'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+	'valid_from' => DateTime->new(
+		'year' => 2024,
+		'month' => 1,
+		'day' => 1,
+	),
 );
 is($obj->id, undef, 'Get id (undef - default).');
 
@@ -37,6 +42,11 @@ $obj = Data::Login->new(
 	'login_name' => 'skim',
 	# foobar
 	'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+	'valid_from' => DateTime->new(
+		'year' => 2024,
+		'month' => 1,
+		'day' => 1,
+	),
 );
 is($obj->id, 777, 'Get id (777).');
 
@@ -54,5 +64,10 @@ $obj = Data::Login->new(
 	'login_name' => 'skim',
 	# foobar
 	'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+	'valid_from' => DateTime->new(
+		'year' => 2024,
+		'month' => 1,
+		'day' => 1,
+	),
 );
 is($obj->id, undef, 'Get id (undef).');
