@@ -20,5 +20,10 @@ my $obj = Data::Login->new(
 	'login_name' => 'skim',
 	# foobar
 	'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+	'valid_from' => DateTime->new(
+		'year' => 2024,
+		'month' => 1,
+		'day' => 1,
+	),
 );
 is($obj->login_name, 'skim', 'Get login name (skim).');
