@@ -3,9 +3,8 @@ use warnings;
 
 use Data::HashType;
 use Data::Login;
-use Data::Login::Role;
 use DateTime;
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Test.
@@ -27,11 +26,7 @@ my $obj = Data::Login->new(
 		'day' => 1,
 	),
 );
-is_deeply(
-	$obj->roles,
-	[],
-	'Get default roles (no roles).',
-);
+is($obj->valid_to, undef, 'Get valid to (undef - default).');
 
 # Test.
 $obj = Data::Login->new(
@@ -46,16 +41,16 @@ $obj = Data::Login->new(
 	'login_name' => 'skim',
 	# foobar
 	'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
-	'roles' => [
-		Data::Login::Role->new(
-			'id' => 1,
-			'role' => 'admin',
-		),
-	],
 	'valid_from' => DateTime->new(
 		'year' => 2024,
 		'month' => 1,
 		'day' => 1,
 	),
+	'valid_to' => DateTime->new(
+		'year' => 2024,
+		'month' => 12,
+		'day' => 31,
+	),
 );
-isa_ok($obj->roles->[0], 'Data::Login::Role');
+isa_ok($obj->valid_to, 'DateTime');
+is($obj->valid_to->ymd, '2024-12-31', 'Get valid to in ymd format (2024-12-31).');
