@@ -1,4 +1,5 @@
 0.03
+ - API CHANGE: Add 'valid_from' and 'valid_to' parameters to Data::Login.
 
 0.02 2024-03-19T14:01:19+01:00
  - Regen example file.
